--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=book-service
+
+spring.jpa.database = h2
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.path=/h2-console
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+
+server.port = 0
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
