--- a/library-service/src/main/resources/application.properties
+++ b/library-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=library-service
+
+
+spring.jpa.hibernate.ddl-auto=create-drop
+server.port = 8080
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
