--- a/library-service/src/main/resources/application.properties
+++ b/library-service/src/main/resources/application.properties
@@ -2,6 +2,12 @@ spring.application.name=library-service
 
 
 spring.jpa.hibernate.ddl-auto=create-drop
-server.port = 8080
+server.port = 0
+eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${random.value} 
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+spring.profiles.active=default
+
+spring.h2.console.path=/h2-console
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
