--- a/library-service/src/main/resources/application.properties
+++ b/library-service/src/main/resources/application.properties
@@ -6,8 +6,11 @@ server.port = 0
 eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${random.value} 
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
-spring.profiles.active=default
+spring.profiles.active=dev
 
 spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
+
+spring.cloud.config.uri=optional:configserver:http://localhost:8889/
+spring.config.import=optional:configserver:http://localhost:8889/
